--- a/index.html
+++ b/index.html
@@ -7,28 +7,57 @@
     <title>Redemittel Deutsch Niveau C1</title>
   </head>
   <body>
+    <h1>Redemittel Deutsch Niveau C1</h1>
     <details>
       <summary>Meinungen ausdrücken</summary>
-      <p>Ich stehe auf dem Standpunkt, dass...</p>
-      <p>Meines Erachtens ist das ...</p>
-      <p>Für mich steht fest, dass ...</p>
-      <p>Ich vertrete die Ansicht, dass ...</p>
-      <p>Ich bin der festen Übezeugung, dass ...</p>
+      <ul>
+        <li>Ich stehe auf dem Standpunkt, dass...</li>
+        <li>Meines Erachtens ist das ...</li>
+        <li>Für mich steht fest, dass ...</li>
+        <li>Ich vertrete die Ansicht, dass ...</li>
+        <li>Ich bin der festen Übezeugung, dass ...</li>
+      </ul>
     </details>
     <details>
       <summary>Zustimmung ausdrücken</summary>
-      <p>Der Meinung bin ich auch.</p>
-      <p>Das ist auch meine Meinung.</p>
-      <p>Ich bin ganz deiner Meinung.</p>
-      <p>Das stimmt.</p>
-      <p>Ja, genau.</p>
-      <p>Das ist richtig.</p>
-      <p>Das ist eine gute Idee.</p>
-      <p>Es ist mit Sicherheit so, dass...</p>
-      <p>Das sehe ich auch so.</p>
-      <p>Da hast du völlig recht.</p>
-      <p>Da kann ich dir nur völlig recht geben.</p>
-      <p>Dem kann ich mich nur anschließen</p>
+      <ul>
+        <li>Der Meinung bin ich auch.</li>
+        <li>Das ist auch meine Meinung.</li>
+        <li>Ich bin ganz deiner Meinung.</li>
+        <li>Das stimmt.</li>
+        <li>Ja, genau.</li>
+        <li>Das ist richtig.</li>
+        <li>Das ist eine gute Idee.</li>
+        <li>Es ist mit Sicherheit so, dass...</li>
+        <li>Das sehe ich auch so.</li>
+        <li>Da hast du völlig recht.</li>
+        <li>Da kann ich dir nur völlig recht geben.</li>
+        <li>Dem kann ich mich nur anschließen</li>
+      </ul>
+    </details>
+    <details>
+      <summary></summary>
+      <label for=""></label><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label><input type="checkbox" />
+    </details>
+    <details>
+      <summary></summary>
+      <label for=""></label><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label
+      ><input type="checkbox" /><label for=""></label><input type="checkbox" />
     </details>
     <dialog aria-labelledby="dialog-name">
       <h3 id="dialog-name">Привет, мир!</h3>
