--- a/index.html
+++ b/index.html
@@ -36,16 +36,28 @@
       </ul>
     </details>
     <details>
-      <summary></summary>
-      <label for=""></label><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label><input type="checkbox" />
+      <summary>Widerspruch/Ablehnung ausdrücken</summary>
+      <input type="checkbox" id="wa1" />
+      <label for="wa1">Das finde ich nicht so gut.</label>
+      <input type="checkbox" id="wa2" />
+      <label for="wa2">Das stimmt meiner Meinung nach nicht.</label
+      ><input type="checkbox" id="wa3" />
+      <label for="wa3">Es ist ganz sicher nicht so.</label>
+      <input type="checkbox" id="wa4" />
+      <label for="wa4">Dem könnte man entgegnen, dass ...</label
+      ><input type="checkbox" id="wa5" />
+      <label for="wa5">Ich sehe das etwas anders, denn ...</label
+      ><input type="checkbox" id="wa6" />
+      <label for="wa6">Es kann nicht sein.</label
+      ><input type="checkbox" id="wa7" />
+      <label for="wa7">Das kann ich mir überhaupt nicht vorstellen.</label
+      ><input type="checkbox" id="wa8" />
+      <label for="wa8"
+        >Zu dem Thema bin ich ganz anderer Meinung, nämlich ...</label
+      ><input type="checkbox" id="wa9" />
+      <label for="wa9">... halte ich für problematisch/übertrieben.</label>
+      <input type="checkbox" id="wa10" />
+      <label for="wa10">Ich denke, diese Einstellung ist falsch.</label>
     </details>
     <details>
       <summary></summary>
@@ -59,9 +71,5 @@
       ><input type="checkbox" /><label for=""></label
       ><input type="checkbox" /><label for=""></label><input type="checkbox" />
     </details>
-    <dialog aria-labelledby="dialog-name">
-      <h3 id="dialog-name">Привет, мир!</h3>
-      <p>Вы не ждали, а вот он я.</p>
-    </dialog>
   </body>
 </html>
