--- a/index.html
+++ b/index.html
@@ -37,39 +37,48 @@
     </details>
     <details>
       <summary>Widerspruch/Ablehnung ausdrücken</summary>
-      <input type="checkbox" id="wa1" />
-      <label for="wa1">Das finde ich nicht so gut.</label>
-      <input type="checkbox" id="wa2" />
-      <label for="wa2">Das stimmt meiner Meinung nach nicht.</label
-      ><input type="checkbox" id="wa3" />
-      <label for="wa3">Es ist ganz sicher nicht so.</label>
-      <input type="checkbox" id="wa4" />
-      <label for="wa4">Dem könnte man entgegnen, dass ...</label
-      ><input type="checkbox" id="wa5" />
-      <label for="wa5">Ich sehe das etwas anders, denn ...</label
-      ><input type="checkbox" id="wa6" />
-      <label for="wa6">Es kann nicht sein.</label
-      ><input type="checkbox" id="wa7" />
-      <label for="wa7">Das kann ich mir überhaupt nicht vorstellen.</label
-      ><input type="checkbox" id="wa8" />
-      <label for="wa8"
-        >Zu dem Thema bin ich ganz anderer Meinung, nämlich ...</label
-      ><input type="checkbox" id="wa9" />
-      <label for="wa9">... halte ich für problematisch/übertrieben.</label>
-      <input type="checkbox" id="wa10" />
-      <label for="wa10">Ich denke, diese Einstellung ist falsch.</label>
-    </details>
-    <details>
-      <summary></summary>
-      <label for=""></label><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label
-      ><input type="checkbox" /><label for=""></label><input type="checkbox" />
+      <div class="vocabulare">
+        <input type="checkbox" id="wa1" />
+        <label for="wa1">Das finde ich nicht so gut.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa2" />
+        <label for="wa2">Das stimmt meiner Meinung nach nicht.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa3" />
+        <label for="wa3">Es ist ganz sicher nicht so.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa4" />
+        <label for="wa4">Dem könnte man entgegnen, dass ...</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa5" />
+        <label for="wa5">Ich sehe das etwas anders, denn ...</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa6" />
+        <label for="wa6">Es kann nicht sein.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa7" />
+        <label for="wa7">Das kann ich mir überhaupt nicht vorstellen.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa8" />
+        <label for="wa8"
+          >Zu dem Thema bin ich ganz anderer Meinung, nämlich ...</label
+        >
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa9" />
+        <label for="wa9">... halte ich für problematisch/übertrieben.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="wa10" />
+        <label for="wa10">Ich denke, diese Einstellung ist falsch.</label>
+      </div>
     </details>
   </body>
 </html>
