--- a/index.html
+++ b/index.html
@@ -10,30 +10,91 @@
     <h1>Redemittel Deutsch Niveau C1</h1>
     <details>
       <summary>Meinungen ausdrücken</summary>
-      <ul>
-        <li>Ich stehe auf dem Standpunkt, dass...</li>
-        <li>Meines Erachtens ist das ...</li>
-        <li>Für mich steht fest, dass ...</li>
-        <li>Ich vertrete die Ansicht, dass ...</li>
-        <li>Ich bin der festen Übezeugung, dass ...</li>
-      </ul>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma1" />
+        <label for="ma1">Ich stehe auf dem Standpunkt, dass...</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma2" />
+        <label for="ma2">Meines Erachtens ist das ...</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma3" />
+        <label for="ma3">Für mich steht fest, dass ...</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma4" />
+        <label for="ma4">Ich vertrete die Ansicht, dass ...</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma5" />
+        <label for="ma5">Ich bin der festen Übezeugung, dass ...</label>
+      </div>
+      <!-- <div class="vocabulare">
+        <input type="checkbox" id="ma6" />
+        <label for="ma6">Es kann nicht sein.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma7" />
+        <label for="ma7">Das kann ich mir überhaupt nicht vorstellen.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma8" />
+        <label for="ma8"
+          >Zu dem Thema bin ich ganz anderer Meinung, nämlich ...</label
+        >
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma9" />
+        <label for="ma9">... halte ich für problematisch/übertrieben.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="ma10" />
+        <label for="ma10">Ich denke, diese Einstellung ist falsch.</label>
+      </div> -->
     </details>
     <details>
       <summary>Zustimmung ausdrücken</summary>
-      <ul>
-        <li>Der Meinung bin ich auch.</li>
-        <li>Das ist auch meine Meinung.</li>
-        <li>Ich bin ganz deiner Meinung.</li>
-        <li>Das stimmt.</li>
-        <li>Ja, genau.</li>
-        <li>Das ist richtig.</li>
-        <li>Das ist eine gute Idee.</li>
-        <li>Es ist mit Sicherheit so, dass...</li>
-        <li>Das sehe ich auch so.</li>
-        <li>Da hast du völlig recht.</li>
-        <li>Da kann ich dir nur völlig recht geben.</li>
-        <li>Dem kann ich mich nur anschließen</li>
-      </ul>
+      <div class="vocabulare">
+        <input type="checkbox" id="za1" />
+        <label for="za1">Der Meinung bin ich auch.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za2" />
+        <label for="za2">Das ist auch meine Meinung.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za3" />
+        <label for="za3">Ich bin ganz deiner Meinung.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za4" />
+        <label for="za4">Das stimmt.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za5" />
+        <label for="za5">Ja, genau.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za6" />
+        <label for="za6">Das ist richtig.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za7" />
+        <label for="za7">Das ist eine gute Idee.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za8" />
+        <label for="za8">Es ist mit Sicherheit so, dass...</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za9" />
+        <label for="za9">Das sehe ich auch so.</label>
+      </div>
+      <div class="vocabulare">
+        <input type="checkbox" id="za10" />
+        <label for="za10">Da hast du völlig recht.</label>
+      </div>
     </details>
     <details>
       <summary>Widerspruch/Ablehnung ausdrücken</summary>
@@ -80,5 +141,6 @@
         <label for="wa10">Ich denke, diese Einstellung ist falsch.</label>
       </div>
     </details>
+    <script src="script.js"></script>
   </body>
 </html>
