--- a/index.html
+++ b/index.html
@@ -30,28 +30,6 @@
         <input type="checkbox" id="ma5" />
         <label for="ma5">Ich bin der festen Übezeugung, dass ...</label>
       </div>
-      <!-- <div class="vocabulare">
-        <input type="checkbox" id="ma6" />
-        <label for="ma6">Es kann nicht sein.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma7" />
-        <label for="ma7">Das kann ich mir überhaupt nicht vorstellen.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma8" />
-        <label for="ma8"
-          >Zu dem Thema bin ich ganz anderer Meinung, nämlich ...</label
-        >
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma9" />
-        <label for="ma9">... halte ich für problematisch/übertrieben.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma10" />
-        <label for="ma10">Ich denke, diese Einstellung ist falsch.</label>
-      </div> -->
     </details>
     <details>
       <summary>Zustimmung ausdrücken</summary>
@@ -141,7 +119,7 @@
         <label for="wa10">Ich denke, diese Einstellung ist falsch.</label>
       </div>
     </details>
-    <script src="js/sounds.js"></script>
-    <script src="js/words.js"></script>
+    <script src="js/soundEngine.js"></script>
+    <script src="js/soundEngine.js"></script>
   </body>
 </html>
