первая карточка готова

--- a/index.html
+++ b/index.html
@@ -9,117 +9,9 @@
   <body>
     <h1>Redemittel Deutsch Niveau C1</h1>
     <details>
-      <summary>Meinungen ausdrücken</summary>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma1" />
-        <label for="ma1">Ich stehe auf dem Standpunkt, dass...</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma2" />
-        <label for="ma2">Meines Erachtens ist das ...</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma3" />
-        <label for="ma3">Für mich steht fest, dass ...</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma4" />
-        <label for="ma4">Ich vertrete die Ansicht, dass ...</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="ma5" />
-        <label for="ma5">Ich bin der festen Übezeugung, dass ...</label>
-      </div>
+      <summary id="ma">Meinungen ausdrücken</summary>
     </details>
-    <details>
-      <summary>Zustimmung ausdrücken</summary>
-      <div class="vocabulare">
-        <input type="checkbox" id="za1" />
-        <label for="za1">Der Meinung bin ich auch.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za2" />
-        <label for="za2">Das ist auch meine Meinung.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za3" />
-        <label for="za3">Ich bin ganz deiner Meinung.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za4" />
-        <label for="za4">Das stimmt.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za5" />
-        <label for="za5">Ja, genau.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za6" />
-        <label for="za6">Das ist richtig.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za7" />
-        <label for="za7">Das ist eine gute Idee.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za8" />
-        <label for="za8">Es ist mit Sicherheit so, dass...</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za9" />
-        <label for="za9">Das sehe ich auch so.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="za10" />
-        <label for="za10">Da hast du völlig recht.</label>
-      </div>
-    </details>
-    <details>
-      <summary>Widerspruch/Ablehnung ausdrücken</summary>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa1" />
-        <label for="wa1">Das finde ich nicht so gut.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa2" />
-        <label for="wa2">Das stimmt meiner Meinung nach nicht.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa3" />
-        <label for="wa3">Es ist ganz sicher nicht so.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa4" />
-        <label for="wa4">Dem könnte man entgegnen, dass ...</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa5" />
-        <label for="wa5">Ich sehe das etwas anders, denn ...</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa6" />
-        <label for="wa6">Es kann nicht sein.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa7" />
-        <label for="wa7">Das kann ich mir überhaupt nicht vorstellen.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa8" />
-        <label for="wa8"
-          >Zu dem Thema bin ich ganz anderer Meinung, nämlich ...</label
-        >
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa9" />
-        <label for="wa9">... halte ich für problematisch/übertrieben.</label>
-      </div>
-      <div class="vocabulare">
-        <input type="checkbox" id="wa10" />
-        <label for="wa10">Ich denke, diese Einstellung ist falsch.</label>
-      </div>
-    </details>
-    <script src="js/soundEngine.js"></script>
+    <script src="js/collectionEngine.js"></script>
     <script src="js/soundEngine.js"></script>
   </body>
 </html>
