делаю несколько карточек, получилось подгружать из txt с помощью fetch

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <h1>Redemittel Deutsch Niveau C1</h1>
-    <details>
+    <!-- <details>
       <summary id="ma">Meinungen ausdrücken</summary>
-    </details>
+    </details> -->
     <script src="js/collectionEngine.js"></script>
     <script src="js/soundEngine.js"></script>
+    <!-- <script src="js/readfile.js"></script> -->
   </body>
 </html>
