--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
@@ -11,7 +12,9 @@
     <title>Redemittel Deutsch Niveau C1</title>
   </head>
   <body>
-    <h1>Redemittel Deutsch Niveau C1</h1>
+    <h1 onclick="openSettings()">Redemittel Deutsch Niveau C1</h1>
+    <div class="settings-panel" onclick="closeSettings()"></div>
+    <footer><hr>Redewendungen zum Lernen, Niveau C1, v.1.3</footer>
     <script src="js/collectionEngine.js"></script>
   </body>
 </html>
