--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Redemittel Deutsch Niveau C1</title>
   </head>
   <body>
-    <h1 onclick="openSettings()">Redemittel Deutsch Niveau C1</h1>
-    <div class="settings-panel" onclick="closeSettings()"></div>
+    <h1>Redemittel Deutsch Niveau C1</h1>
+    <div class="settings-panel"></div>
     <footer><hr>Redewendungen zum Lernen, Niveau C1, v.1.3</footer>
     <script src="js/collectionEngine.js"></script>
   </body>
